1999-05-30  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4 (JAVALIBPATH_VAR): New variable.  Set to KAFFELIBRARYPATH
	in case of Kaffe, default to _JAVASWARM_LIBPATH in others.

1999-05-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acdll.m4, Makefile.am (EXTRA_DIST): New macro.

1999-05-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* actcltk.m4: Check for .sl as well as .so.

1999-05-18  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acfind.m4: Check for .sl as well as .so.

1999-05-15  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4: Add hp-ux and alpha to JDK JAVAINCLUDES.
	If $jdkdir is /usr, use /usr/include/java, otherwise $prefix/include.
	Don't single-quote JAVACLASSES.

1999-05-14  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4: Don't force JAVAC if set.
	New substituion JAVALIBPREFIX.  Japhar expects to see libraries
	prefixed like libjaphar_LIBNAME.

1999-05-13  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4 (vj_FIND_JDK): In JAVA, use KAFFELIBRARYPATH instead of
	LD_LIBRARY_PATH.  KAFFELIBRARYPATH sets dynamic library path,
	and we count on -rpath being compiled into the executable itself;
	LD_LIBRARY_PATH isn't portable, e.g. HPUX.  For JAVALIBS, use
	only jdkdir/lib/kaffe.

1999-05-03  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acpath.m4 (md_CHECK_PATH_SYNTAX): New macro.

	* Makefile.am (EXTRA_DIST): Add acpath.m4.

	* acjdk.m4 (vj_FIND_JDK): New substitution jdkdosdir.  Set
	JAVACLASSES, JAVAENV, and JAVAC to use jdkdosdir and
	backslashes in cygwin case, and jdkdir and slashes, otherwise.

1999-04-30  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4 (vj_FIND_JDK): Add check for $jdkdir/include/winnt.
	(md_CHECK_JNI_H): New macro.

	* acxpm.m4 (md_FIND_XPM): Use AC_TRY_COMPILE instead of simple
	file tests.  Add messages.  Don't do xpm.h tests if gnuwin32.
	(md_STRUCT_XPM_ALLOCPIXELS): Use X11/xpm.h or xpm.h depending on
	above.
