@@ -1,3 +1,8 @@
+1999-05-31    <mgd@HELEN>
+
+	* acjdk.m4 (JAVALIBS): Different settings for Solaris, Digital Unix,
+	HPUX, and WebObjects.
+
 1999-05-30  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* acjdk.m4 (JAVALIBPATH_VAR): New variable.  Set to KAFFELIBRARYPATH
